--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AlibabaClone - B2B Marketplace | Source Products from Verified Suppliers</title>
-    <meta name="description" content="AlibabaClone is a leading B2B marketplace connecting buyers with verified suppliers worldwide. Find products, request quotes, and source from millions of suppliers." />
-    <meta name="author" content="AlibabaClone" />
+    <title>Alibaba - B2B Marketplace | Source Products from Verified Suppliers</title>
+    <meta name="description" content="Alibaba is a leading B2B marketplace connecting buyers with verified suppliers worldwide. Find products, request quotes, and source from millions of suppliers." />
+    <meta name="author" content="Alibaba" />
     <meta name="keywords" content="B2B marketplace, wholesale, suppliers, manufacturers, trade, products" />
 
-    <meta property="og:title" content="AlibabaClone - B2B Marketplace" />
+    <meta property="og:title" content="Alibaba - B2B Marketplace" />
     <meta property="og:description" content="Connect with verified suppliers worldwide. Source products from millions of manufacturers." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@AlibabaClone" />
+    <meta name="twitter:site" content="@Alibaba" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
